--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -70,9 +70,6 @@
   justify-content: end;
   align-items: end;
   border-radius: 20px;
-}
-
-.project-image-div {
   box-shadow: 0px 0px 18px 3px rgba(0, 0, 0, 0.4);
 }
 
@@ -96,6 +93,7 @@
 
 .project-tools-div {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .project-tool {
